# BFB_project

./: .env.example  .gitignore  ARCHITECTURE_DECISIONS.md  CLAUDE.md  Objectif_du_projet.md  PLAN.md  README.md  docker-compose.yaml  pyproject.toml  test_vertex.py
data/: test_questions.md
data/mock/: schema.sql  seed.sql
data/procedures/: analyse_solvabilite.md  litige_transaction.md  opposition_carte.md  remboursement_frais.md
src/: config.py  llm_factory.py
src/agent/: agent.py  agent_langgraph.py  agent_react.py  cli.py
src/eval/: dataset.py  run_eval.py
src/indexer/: indexer.py  retriever.py
src/pii/: anonymizer.py
src/tools/: rag_tool.py  schema_inspector.py  sql_tool.py
